10/30/07 Jason Frisvold
         - simscan directory umask fix (John Simpson)
         - band-aid simscanmk NFS timing issue on solaris - Tom Collins
         - strsep bug in Solaris - Tom Collins
         - set exit code on errors - Jeremy Kister
         - fix compile warning issues with long versus int - Jeremy Kister
         - add pid to debug messages - Jeremy Kister
         - RFC2822 Received field compliance - Tullio Andreatta

10/29/07 Jason Frisvold
         - Support daily and main .inc and .cvd files (John Simpson)
         - Fixed a few compiler warnings (Jason Frisvold)
         - simcontrol lookups should be lowercase (Jason Frisvold)
         - lowercase all strings in the simcontrol.cdb file (Jason Frisvold)

10/29/07 Ken Jones
         - release version 1.4.0 with p0f code moved to qmail-smtpd

03/11/07 Ken Jones
         - for dspam only authorized users can send email to spam@ and nospam@,
           includes support for custom smtp error message

05/18/06 George Breahna
         - first version of DSPAM support

         R
         - add u_char casting to isupper and tolower

01/07/06 Ken Jones
         - envoke ripmime with --disable-qmail-bounce

01/07/06 Ken Jones
         - reject blank envelopes with proper error

10/05/05 Ken Jones
         - found an IsSpam=1.0 instead of IsSpam==1
            for the spam passthru setting

10/04/05 Ken Jones
         - virus drop message was not exiting at the right time.
             Found by Russ Lists
         - use per domain hit count on spam log message if set.
         - if read from standard in fails the temp file was not
             closed so the temporary work directory would not
             be removed. 

09/30/05 Ken Jones
         - put 's' at the end of processing time and
            move to after status.
         - add RELAYCLIENT log line. suggested by Sim
         - replace --with-pcre with two new ones
            --with-pcre-lib --with-pcre-include